--- a/demo/XHR/xhr.html
+++ b/demo/XHR/xhr.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
+    <script src = XHR.js></script>
 </head>
 <body>
-$END$
+<div id = "text">Text will be here</div>
+<div id = "html">HTML will be here</div>
+<div id = "xml">XML will be here</div>
 </body>
 </html>
